<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="title_main">Playlist maker</string>
    <string name="settings_dark_theme">Темная тема</string>
    <string name="settings_shareapp">Поделиться приложением</string>
    <string name="settings_emailtosupport">Написать в поддержку</string>
    <string name="settings_useragement">Пользовательское соглашение</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="support_email" translatable="false">aleksandr@chivarzin.ru</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="course_url" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="t1_name">Smells Like Teen Spirit</string>
    <string name="t1_artist_name">Nirvana</string>
    <string name="t1_duration">5:01</string>
    <string name="t1_artwork">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="t2_name">Billie Jean</string>
    <string name="t2_artist_name">Michael Jackson</string>
    <string name="t2_duration">4:35</string>
    <string name="t2_artwork">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="t3_name">Stayin\' Alive</string>
    <string name="t3_artist_name">Bee Gees</string>
    <string name="t3_duration">4:10</string>
    <string name="t3_artwork">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="t4_name">Whole Lotta Love</string>
    <string name="t4_artist_name">Led Zeppelin</string>
    <string name="t4_duration">5:33</string>
    <string name="t4_artwork">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="t5_name">Sweet Child O\'Mine</string>
    <string name="t5_artist_name">Guns N\' Roses</string>
    <string name="t5_duration">5:03</string>
    <string name="t5_artwork">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
    <string name="track_name_tools">The best track</string>
    <string name="artist_name_tools">Ivan Ivanov</string>
    <string name="track_time_default">00:00</string>
    <string name="search_not_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="artist_name_error">Неизвестный артист</string>
    <string name="track_name_error">Неизвестный трек</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_searched">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="albom">Альбом</string>
    <string name="collection_name_error">Неизвестный альбом</string>
    <string name="year">Год</string>
    <string name="release_date_error">1970</string>
    <string name="janr">Жанр</string>
    <string name="janr_error">Unknown</string>
    <string name="country">Страна</string>
    <string name="country_error">Неизвестно</string>
    <string name="player_not_prepared">Плеер не подготовлен. Пожалуйста, попробуйте позже.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="no_favorites">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="you_not_created_not_one_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="add_playlist_name">Название*</string>
    <string name="add_playlist_description">Описание</string>
    <string name="create_playlist_button_text">Создать</string>
    <string name="treka">треков</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_content">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="compate">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист</string>
    <string name="playlist_name_tools">The best playlist</string>
    <string name="playlist_description_tools">Super music 1765</string>
    <string name="playlist_time_tools">555 минут</string>
    <string name="playlist_track_count_tools">10 треков</string>
    <string name="minut">минут</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="want_to_remove_track">Хотите удалить трек?</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="save_playlist_button_text">Сохранить</string>
    <string name="playlist_no_tracks">В этом плейлисте нет треков</string>
</resources>