<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_main"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:paddingVertical="10dp"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/search"
        app:icon="@drawable/icon_search"
        style="@style/MainButtonStyle" />

    <Button
        android:id="@+id/button_mediateka"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/mediateka"
        app:icon="@drawable/icon_media"
        style="@style/MainButtonStyle"/>

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/icon_settings"
        style="@style/MainButtonStyle"/>
</LinearLayout>