<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/settings_action_back"
            style="@style/ActionBackStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/title_settings"
            style="@style/ActivityTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

    </LinearLayout>

    <!--Отступ-->
    <View
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settings_dark_theme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:fontFamily="@font/ys_display_regular"
        android:paddingLeft="16dp"
        android:text="@string/settings_dark_theme"
        android:textSize="@dimen/settings_font_size"
        android:layout_marginRight="9dp"/>

    <Button
        android:id="@+id/action_share"
        style="@style/SettingsButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/settings_shareapp"
        app:icon="@drawable/action_share" />

    <Button
        android:id="@+id/action_support"
        style="@style/SettingsButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/settings_emailtosupport"
        app:icon="@drawable/action_support" />

    <Button
        android:id="@+id/action_user_agreement"
        style="@style/SettingsButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/settings_useragement"
        app:icon="@drawable/action_on_next_activity" />

</LinearLayout>