<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_dialog_background"
    android:elevation="8dp"
    tools:context=".ui.player.PlayerControlsBottomSheet">

    <!-- Ручка (Handle) -->
    <View
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bottom_sheet_up_down" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="8dp">

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/artwork_default" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/playlist_name"
                style="@style/TrackNameSearchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                tools:text="@string/playlist_name_tools" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tracks_count"
                    style="@style/TrackDetailsSearchStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    tools:text="@string/playlist_track_count_tools" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/action_share"
        style="@style/PlaylistMenuButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:layout_marginTop="16dp"
        android:text="@string/share" />

    <Button
        android:id="@+id/action_edit"
        style="@style/PlaylistMenuButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/edit_information" />

    <Button
        android:id="@+id/action_delete"
        style="@style/PlaylistMenuButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/remove_playlist" />
</LinearLayout>