<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.newplaylist.NewPlaylistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/new_playlist_action_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ActionBackStyle" />

        <TextView
            android:id="@+id/title_new_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ActivityTitleStyle"
            android:text="@string/new_playlist" />

    </LinearLayout>

    <ImageView
        android:id="@+id/newplaylist_artwork"
        android:layout_width="match_parent"
        android:layout_height="312dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/add_artwork" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newplaylist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_playlist_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newplaylist_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_playlist_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create"
            style="@style/CreatePlaylistButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:enabled="false"
            android:padding="16dp"
            android:text="@string/create_playlist_button_text" />
    </FrameLayout>
</LinearLayout>