<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.editplaylist.EditPlaylistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/edit_playlist_action_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ActionBackStyle" />

        <TextView
            android:id="@+id/title_edit_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ActivityTitleStyle"
            android:text= "@string/edit" />

    </LinearLayout>

    <ImageView
        android:id="@+id/edit_playlist_artwork"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:scaleType="centerCrop"
        android:src="@drawable/add_artwork_m" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_playlist_name"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_playlist_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_playlist_description"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_playlist_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            style="@style/CreatePlaylistButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:enabled="false"
            android:padding="16dp"
            android:text="@string/save_playlist_button_text" />
    </FrameLayout>
</LinearLayout>