<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <ImageView
        android:id="@+id/player_action_back"
        style="@style/ActionBackStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_action_back"
        app:layout_constraintVertical_bias="0.96">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/player_playpause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player_artist_name"
                app:srcCompat="@drawable/play" />

            <TextView
                android:id="@+id/player_artist_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/artist_name_error"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player_track_name"
                tools:text="@string/artist_name_tools" />

            <TextView
                android:id="@+id/player_track_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/track_name_error"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player_artwork"
                tools:text="@string/track_name_tools" />

            <ImageView
                android:id="@+id/player_artwork"
                android:layout_width="0dp"
                android:layout_height="312dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="24dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/artwork_default" />

            <ImageView
                android:id="@+id/player_addto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="54dp"
                android:layout_marginEnd="55dp"
                app:layout_constraintEnd_toStartOf="@+id/player_playpause"
                app:layout_constraintHorizontal_bias="0.562"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player_artist_name"
                app:srcCompat="@drawable/add_to" />

            <ImageView
                android:id="@+id/player_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="54dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.322"
                app:layout_constraintStart_toEndOf="@+id/player_playpause"
                app:layout_constraintTop_toBottomOf="@+id/player_artist_name"
                app:srcCompat="@drawable/favorite" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="26dp"
                android:layout_height="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/track_time_default"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player_playpause" />

            <TextView
                android:id="@+id/player_duration_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="39dp"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/duration"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/player_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="39dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/track_time_default"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.448"
                app:layout_constraintStart_toEndOf="@+id/player_duration_hint"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>